--- a/storestyle.css
+++ b/storestyle.css
@@ -6,72 +6,72 @@ body {
   justify-content: center;
   font-family: Inter, sans-serif;
   gap: 60px;
-  background: #F5F5F7;
+  background: #f5f5f7;
   width: 100vw;
 }
 .top {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 80px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 80px;
+  width: 100%;
 }
 .top1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
 }
 .backround {
-    width: 100%;
-    height: 75px;
-    background: #F5F5F7;
-    position: relative;
-    overflow: hidden;
+  width: 100%;
+  height: 75px;
+  background: #f5f5f7;
+  position: relative;
+  overflow: hidden;
 }
 .backround1 {
-    width: 40%;
-    height: 50px;
-    border-radius: 100px;
-    background-color: #FD8C1F;
-    filter: blur(10px);
-    position: absolute;
-    bottom: 55px;
-    right: 0;
+  width: 40%;
+  height: 50px;
+  border-radius: 100px;
+  background-color: #fd8c1f;
+  filter: blur(10px);
+  position: absolute;
+  bottom: 55px;
+  right: 0;
 }
 .backround2 {
-    width: 90%;
-    height: 150px;
-    border-radius: 200px;
-    background-color: #E44CBB;
-    filter: blur(10px);
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    transform: translateX(-50%);
+  width: 90%;
+  height: 150px;
+  border-radius: 200px;
+  background-color: #e44cbb;
+  filter: blur(10px);
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .backround3 {
-    width: 67.5%;
-    height: 150px;
-    border-radius: 200px;
-    background: #F55BE4;
-    opacity: 0.5;
-    filter: blur(10px);
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    transform: translateX(-50%);
+  width: 67.5%;
+  height: 150px;
+  border-radius: 200px;
+  background: #f55be4;
+  opacity: 0.5;
+  filter: blur(10px);
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .backround4 {
-    width: 60%;
-    height: 75px;
-    border-radius: 100px;
-    background-color: #019FFB;
-    opacity: 0.5;
-    filter: blur(10px);
-    position: absolute;
-    left: 0;
-    bottom: 50px;
+  width: 60%;
+  height: 75px;
+  border-radius: 100px;
+  background-color: #019ffb;
+  opacity: 0.5;
+  filter: blur(10px);
+  position: absolute;
+  left: 0;
+  bottom: 50px;
 }
 .nav {
   width: 100vw;
@@ -111,247 +111,331 @@ body {
   text-align: center;
 }
 .top2 {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 140px;
-    align-items: flex-start;
-    width: calc(100% - 280px);
+  display: flex;
+  justify-content: space-between;
+  margin: 0 140px;
+  align-items: flex-start;
+  width: calc(100% - 280px);
 }
 .top2-1 {
-    display: flex;
-    align-items: center;
-    gap: 32px;
+  display: flex;
+  align-items: center;
+  gap: 32px;
 }
 .top2-1txt1 {
-    font-family: Inter;
-    font-size: 44px;
-    font-weight: 700;
-    line-height: 52px;
-    background: linear-gradient(90deg, #0090F7 0%, #BA62FC 50%, #F2416B 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-family: Inter;
+  font-size: 44px;
+  font-weight: 700;
+  line-height: 52px;
+  background: linear-gradient(90deg, #0090f7 0%, #ba62fc 50%, #f2416b 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .top2-1txt2 {
-    font-family: Inter;
-    font-size: 44px;
-    font-weight: 700;
-    line-height: 52px;
-    color: #6E6E73;
+  font-family: Inter;
+  font-size: 44px;
+  font-weight: 700;
+  line-height: 52px;
+  color: #6e6e73;
 }
 .top2-2 {
-    display: flex;
-    align-items: flex-start;
-    gap: 16px;
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
 }
 .top2-2img {
-    width: 35px;
-    height: 35px;
+  width: 35px;
+  height: 35px;
 }
 .top2-2baruun {
-    width: 175px;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: flex-start;
+  width: 175px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
 }
 .top2-2txt {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
 }
 .top2-2txt1 {
-    height: 20px;
-    align-items: center;
-    font-size: 14px;
-    font-weight: 700;
+  height: 20px;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 700;
 }
 .top2-2txt2 {
-    height: 16px;
-    font-size: 14px;
-    font-weight: 400;
-    color: #0066CC;
-    text-decoration: underline;
+  height: 16px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #0066cc;
+  text-decoration: underline;
 }
 .top3 {
-    width: calc(100% - 280px);
-    display: flex;
-    gap: 12px;
-    margin: 0 140px;
+  width: 100%;
+  display: flex;
+  gap: 12px;
 }
 .top3-item {
-    width: 136px;
-    padding: 16px 8px;
-    gap: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 136px;
+  padding: 16px 8px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.scroll-jijig-zuun {
+  margin-left: 140px;
+}
+.scroll-jijig-baruun {
+  margin-right: 140px;
 }
 .top3-img {
-    height: 78px;
+  height: 78px;
 }
 .top3-txt {
-    height: 20px;
-    font-size: 14px;
-    font-weight: 700;
-    color: #1d1d1f;
-    text-align: center;
+  height: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #1d1d1f;
+  text-align: center;
 }
 .main {
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  width: 100%;
 }
-.section1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 24px;
-    width: 100%;
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 24px;
+  width: 100%;
 }
 .title {
-    margin-left: 140px;
-    display: flex;
-    gap: 4px;
-    justify-content: flex-start;
+  margin-left: 140px;
+  display: flex;
+  gap: 4px;
+  justify-content: flex-start;
 }
 .title1 {
-    font-size: 24px;
-    line-height: 34px;
-    font-weight: 700;
-    background: linear-gradient(90deg, #0090F7 0%, #BA62FC 50%, #F2416B 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 700;
+  background: linear-gradient(90deg, #0090f7 0%, #ba62fc 50%, #f2416b 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .title2 {
-    color: #6E6E73;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 34px;
+  color: #6e6e73;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 34px;
 }
 .scroll {
-    display: flex;
-    gap: 20px;
-    margin-left: 140px;
-    width: calc(100% - 280px);
-    height: 500px;
-    overflow: auto;
-    scrollbar-width: none;
-    scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
+  display: flex;
+  gap: 20px;
+  overflow: auto;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
 }
 .scroll ::-webkit-scrollbar {
-    display: none;
+  display: none;
+}
+.scroll-jijig {
+  display: flex;
+  overflow: auto;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+.scroll-jijig ::-webkit-scrollbar {
+  display: none;
 }
 .sec1-item {
-    min-width: 400px;
-    height: 500px;
-    scroll-snap-align: center;
-    border-radius: 18px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 2px 4px 12px 0 rgba(0, 0, 0, 0.08);
+  min-width: 400px;
+  height: 500px;
+  scroll-snap-align: center;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  transition: all 0.3s ease;
+}
+.sec1-item:hover {
+  transform: scale(1.01);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
 }
 .sec1-txt1 {
-    width: 340px;
-    margin-top: 54px;
-    margin-left: 30px;
-    font-size: 28px;
-    font-weight: 600;
-    line-height: 1.1428571429;
-    color: black;
+  width: 340px;
+  margin-top: 54px;
+  margin-left: 30px;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 1.1428571429;
+  color: black;
 }
 .sec1-txt2 {
-    margin-top: 10px;
-    margin-left: 30px;
-    font-size: 17px;
-    font-weight: 500;
-    line-height: 1.1428571429;
-    color: black;
+  margin-top: 10px;
+  margin-left: 30px;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 1.1428571429;
+  color: black;
 }
 .sec1-txt3 {
-    margin-top: 10px;
-    margin-left: 30px;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 1.1428571429;
-    color: black;
+  margin-top: 10px;
+  margin-left: 30px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.1428571429;
+  color: black;
 }
 .text-color {
-    color: white;
+  color: white;
 }
 .sec1-1 {
-    background-image: url(./images2/1.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/1.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 140px;
 }
 .sec1-2 {
-    background-image: url(./images2/2.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/2.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-3 {
-    background-image: url(./images2/3.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/3.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-4 {
-    background-image: url(./images2/4.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/4.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-5 {
-    background-image: url(./images2/5.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/5.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-6 {
-    background-image: url(./images2/6.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/6.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-7 {
-    background-image: url(./images2/7.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/7.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-8 {
-    background-image: url(./images2/8.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/8.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-9 {
-    background-image: url(./images2/9.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/9.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-10 {
-    background-image: url(./images2/10.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/10.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-11 {
-    background-image: url(./images2/11.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/11.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .sec1-12 {
-    background-image: url(./images2/12.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./images2/12.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 140px;
+}
+.sec2-item {
+  min-width: 313px;
+  height: 500px;
+  scroll-snap-align: center;
+  border-radius: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  transition: all 0.3s ease;
+  background-color: white;
+  overflow: hidden;
+}
+.sec2-item:hover {
+  transform: scale(1.01);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
+.sec2-1txt1 {
+  margin: 30px 0 0 30px;
+  font-size: 12px;
+  font-weight: 500;
+  color: rgb(66, 66, 69);
+  line-height: 16px;
+}
+.sec2-1txt2 {
+  margin: 8px 0 0 30px;
+  font-size: 28px;
+  font-weight: 600;
+  color: rgb(29, 29, 31);
+  line-height: 32px;
+}
+.circle-color {
+  height: 58px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+.circle {
+  width: 12px;
+  height: 12px;
+}
+.sec2-txt1 {
+  justify-content: flex-start;
+  margin: 0;
+  color: rgb(182, 68, 0);
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  width: calc(100% - 60px);
+}
+.sec2-1 {
+  margin-left: 140px;
+  min-width: 400px;
+  height: 500px;
+  align-items: flex-start;
+  background-image: url(./images2/sec2-1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.sec2-2 {
+  width: 313px;
+  height: 301px;
 }
